--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "json-server": "^1.0.0-alpha.23",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~5.0.0",
